# Flood-Detection

./: .replit  app.py  flood_model.pkl  pyproject.toml  replit.md  scaler.pkl
config/: settings.py
data/: COMMIT_EDITMSG  FETCH_HEAD  config  data_loader.py  gemini_climate_service.py  index  synthetic_data_generator.py
data/logs/: HEAD
data/logs/refs/heads/: replit-agent
data/logs/refs/remotes/origin/: HEAD
data/refs/heads/: main
git/logs/refs/remotes/gitsafe-backup/: HEAD  main
git/logs/refs/remotes/origin/: main
git/refs/heads/: replit-agent
git/refs/remotes/origin/: main
models/: flood_predictor.py
utils/: risk_assessment.py  visualization.py
